// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within tasksSelectors the selectors match their snapshots for the includedSourceTasksSelector 1`] = `
[
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "id": "7003",
    "isActive": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 3",
    "projectId": "2002",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "id": "7004",
    "isActive": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 4",
    "projectId": "2003",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 3,
    "estimate": "PT6H",
    "id": "7005",
    "isActive": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 5",
    "projectId": "2004",
    "workspaceId": "1001",
  },
]
`;

exports[`within tasksSelectors the selectors match their snapshots for the sourceTasksForTransferSelector 1`] = `
[
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "id": "7003",
    "isActive": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 3",
    "projectId": "2002",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "id": "7004",
    "isActive": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 4",
    "projectId": "2003",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 3,
    "estimate": "PT6H",
    "id": "7005",
    "isActive": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 5",
    "projectId": "2004",
    "workspaceId": "1001",
  },
]
`;

exports[`within tasksSelectors the selectors match their snapshots for the sourceTasksInActiveWorkspaceSelector 1`] = `
[
  {
    "assigneeIds": [
      "123123",
    ],
    "entryCount": 2,
    "estimate": "PT2H",
    "id": "7001",
    "isActive": true,
    "isIncluded": false,
    "linkedId": "clock-task-01",
    "memberOf": "tasks",
    "name": "Task 1",
    "projectId": "2001",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT0M",
    "id": "7002",
    "isActive": true,
    "isIncluded": false,
    "linkedId": "clock-task-02",
    "memberOf": "tasks",
    "name": "Task 2",
    "projectId": "2001",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "id": "7003",
    "isActive": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 3",
    "projectId": "2002",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "id": "7004",
    "isActive": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 4",
    "projectId": "2003",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 3,
    "estimate": "PT6H",
    "id": "7005",
    "isActive": true,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 5",
    "projectId": "2004",
    "workspaceId": "1001",
  },
]
`;

exports[`within tasksSelectors the selectors match their snapshots for the taskIdToLinkedIdSelector 1`] = `
{
  "7001": "clock-task-01",
  "7002": "clock-task-02",
  "clock-task-01": "7001",
  "clock-task-02": "7002",
}
`;

exports[`within tasksSelectors the selectors match their snapshots for the tasksTotalCountsByTypeSelector 1`] = `
{
  "entryCount": 8,
  "existsInTarget": 2,
  "isActiveInSource": 4,
  "isActiveInTarget": 1,
  "isIncluded": 3,
}
`;

exports[`within tasksSelectors the tasksForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = false 1`] = `
[
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "existsInTarget": false,
    "id": "7003",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 3",
    "projectId": "2002",
    "projectName": "Test Project B",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "existsInTarget": false,
    "id": "7004",
    "isActive": false,
    "isActiveInSource": false,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 4",
    "projectId": "2003",
    "projectName": "Test Project C",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 3,
    "estimate": "PT6H",
    "existsInTarget": false,
    "id": "7005",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 5",
    "projectId": "2004",
    "projectName": "Test Project D",
    "workspaceId": "1001",
  },
]
`;

exports[`within tasksSelectors the tasksForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = true 1`] = `
[
  {
    "assigneeIds": [
      "123123",
    ],
    "entryCount": 2,
    "estimate": "PT2H",
    "existsInTarget": true,
    "id": "7001",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isIncluded": false,
    "linkedId": "clock-task-01",
    "memberOf": "tasks",
    "name": "Task 1",
    "projectId": "2001",
    "projectName": "Test Project A",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT0M",
    "existsInTarget": true,
    "id": "7002",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": false,
    "linkedId": "clock-task-02",
    "memberOf": "tasks",
    "name": "Task 2",
    "projectId": "2001",
    "projectName": "Test Project A",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "existsInTarget": false,
    "id": "7003",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 3",
    "projectId": "2002",
    "projectName": "Test Project B",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 1,
    "estimate": "PT6H",
    "existsInTarget": false,
    "id": "7004",
    "isActive": false,
    "isActiveInSource": false,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 4",
    "projectId": "2003",
    "projectName": "Test Project C",
    "workspaceId": "1001",
  },
  {
    "assigneeIds": [],
    "entryCount": 3,
    "estimate": "PT6H",
    "existsInTarget": false,
    "id": "7005",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isIncluded": true,
    "linkedId": null,
    "memberOf": "tasks",
    "name": "Task 5",
    "projectId": "2004",
    "projectName": "Test Project D",
    "workspaceId": "1001",
  },
]
`;
